--- a/layouts/partials/logo.html
+++ b/layouts/partials/logo.html
@@ -1,3 +1,3 @@
-<a id="logo" href="{{ .Site.BaseURL }}">
-    <img src="{{ .Site.BaseURL }}/logo.png" alt="Github Actions Certification" >
+<a id="logo" href="/">
+    <img src="/logo.png" alt="Github Actions Certification" >
 </a>
