--- a/layouts/partials/logo.html
+++ b/layouts/partials/logo.html
@@ -1,11 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Image Example</title>
-</head>
-<body>
-    <img src="https://images.credly.com/size/340x340/images/89efc3e7-842b-4790-b09b-9ea5efc71ec3/image.png" alt="Github Actions Certification">
-</body>
-</html>
+<a id="logo" href="/">
+    <img src="/logo.png" alt="Github Actions Certification" >
+</a>
