Draft GitHub Admin and GitHub Advanced Security exams

--- a/layouts/exams/single.html
+++ b/layouts/exams/single.html
@@ -2,8 +2,12 @@
 
 {{ .Content }}
 
+{{ $exam := .Params.exam }}
+
 <div class='quizdown'>
-{{ range (where .Site.RegularPages "Section" "questions") }}
-    {{ .RawContent }}
+{{ range where .Site.RegularPages "Section" "questions" }}
+    {{ if eq $exam .Params.exam }}
+        {{ .RawContent }}
+    {{ end }}
 {{ end }}
 </div>
