--- a/layouts/shortcodes/tests.html
+++ b/layouts/shortcodes/tests.html
@@ -3,53 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
-        .exam-container {
-            display: flex;
-            justify-content: space-between;
-            margin: 5px;
-        }
-
-        .exam-box {
-            width: 30%;
-            padding: 20px;
-            border: 2px solid #ccc;
-            text-align: center;
-        }
-
-        .exam-title {
-            font-size: 24px;
-            margin-bottom: 10px;
-        }
-
-        .exam-image {
-            max-width: 100%;
-            height: auto;
-            margin-bottom: 10px;
-        }
-
-        .exam-link {
-            display: inline-block;
-            padding: 10px 20px;
-            background-color: #007bff;
-            color: #fff;
-            text-decoration: none;
-            font-weight: bold;
-            border-radius: 5px;
-        }
-
-        .exam-disabled {
-            display: inline-block;
-            padding: 10px 20px;
-            background-color: #ccc;
-            color: #fff;
-            text-decoration: none;
-            font-weight: bold;
-            border-radius: 5px;
-            cursor: not-allowed;
-        }
-    </style>
-</head>
+    <link rel="stylesheet" href="/css/practice-tests.css">
+    </head>
 <body>
     <div class="exam-container">
         <div class="exam-box">
@@ -65,6 +20,7 @@
         <div class="exam-box">
             <img class="exam-image" src="/images/admin_badge.png" alt="GitHub Exam 3">
             <a class="exam-disabled">Not available</a>
+                   
         </div>
     </div>
 </body>
