--- a/static/css/practice-tests.css
+++ b/static/css/practice-tests.css
@@ -1,48 +1,71 @@
 .exam-container {
   display: flex;
   flex-wrap: nowrap;
-  justify-content: center;
+  justify-content: space-between;
 }
 
-.exam-box {
-  flex-basis: auto;
-  margin: 5px;
-  padding: 10px;
-  border: 2px solid #ccc;
-  text-align: center;
+.card {
+  position: relative;
+  display: flex;
+  align-items: stretch;
+  justify-content: space-between;
+  width: 320px;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+  padding: 32px;
+  margin: 2px;
+  overflow: hidden;
+  border-radius: 10px;
+  background: #212121;
+  border: 2px solid #313131;
+  transition: all 0.5s cubic-bezier(0.23, 1, 0.320, 1);
 }
 
-.exam-title {
-  font-size: 24px;
-  margin-bottom: 10px;
+.content {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 20px;
+  color: #e8e8e8;
+  transition: all 0.5s cubic-bezier(0.23, 1, 0.320, 1);
 }
 
-
-.exam-image {
-  max-width: 100%;
-  height: auto;
-  margin-bottom: 10px;
+.content .heading {
+  font-weight: 700;
+  font-size: 32px;
 }
 
-.exam-link {
-  display: inline-block;
-  padding: 10px 20px;
-  background-color: #007bff;
-  color: #fff;
-  text-decoration: none;
-  font-weight: bold;
-  border-radius: 5px;
+.content .para {
+  line-height: 1.5;
 }
 
+.content .btn {
+    color: #e8e8e8;
+    text-decoration: none;
+    padding: 10px;
+    font-weight: 600;
+    border: none;
+    cursor: pointer;
+    background: #0974f1;
+    border-radius: 5px;
+    text-align: center;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+  }
 
+  .content .btn.disabled {
+    color: #999; /* Change the text color to gray */
+    cursor: not-allowed; /* Change cursor to 'not-allowed' */
+    background: #ccc; /* Change background color to light gray */
+    box-shadow: none; /* Remove box shadow */
+    pointer-events: none; /* Disable pointer events */
+  }
 
-.exam-disabled {
-  display: inline-block;
-  padding: 10px 20px;
-  background-color: #ccc;
-  color: #fff;
-  text-decoration: none;
-  font-weight: bold;
-  border-radius: 5px;
-  cursor: not-allowed
+.card:hover {
+  box-shadow: 0 0 20px rgba(9, 117, 241, 0.8);
+  border-color: #0974f1;
+}
+
+.content .btn:hover {
+  outline: 2px solid #e8e8e8;
+  background: transparent;
+  color: #e8e8e8;
 }
