--- a/layouts/shortcodes/test_cards.html
+++ b/layouts/shortcodes/test_cards.html
@@ -11,19 +11,36 @@
     <div class="exam-container">
         <div class="card">
             <div class="content">
-                <p class="heading">GitHub Advanced Security</p>
+                <div class="badge-certified">PASSED</div>
+                <img src="/images/advanced_security_badge.png" alt="advanced_security_badge" style="max-width: 100%;">
+                <ul class="check-list">
+                    <li>5 Questions</li>
+                    <li>Code scanning</li>
+                    <li>Dependency management</li>
+                </ul>
                 <a href="/practice_tests/advanced_security" class="btn disabled">Unavailable</a>
             </div>
         </div>
         <div class="card">
             <div class="content">
-                <p class="heading">GitHub Actions</p>
+                <div class="badge-certified">PASSED</div>
+                <img src="/images/actions_badge.png" alt="actions_badge" style="max-width: 100%;">
+                <ul class="check-list">
+                    <li>5 Questions</li>
+                    <li>Consume workflows</li>
+                    <li>Author and maintain actions</li>
+                </ul>
                 <a href="/practice_tests/actions" class="btn">Start</a>
             </div>
         </div>
         <div class="card">
             <div class="content">
-                <p class="heading">GitHub Admin</p>
+                <img src="/images/admin_badge.png" alt="admin_badge" style="max-width: 100%;">
+                <ul class="check-list">
+                    <li>5 Questions</li>
+                    <li>Manage user identities</li>
+                    <li>GitHub authentication</li>
+                </ul>
                 <a href="/practice_tests/admin" class="btn disabled">Unavailable</a>
             </div>
         </div>
