--- a/static/css/practice-tests.css
+++ b/static/css/practice-tests.css
@@ -22,7 +22,6 @@
 .content {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   color: #e8e8e8;
   transition: all 0.5s cubic-bezier(0.23, 1, 0.32, 1);
 }
@@ -48,7 +47,7 @@
 
 .content .check-list {
   padding-inline-start: 0;
-  margin: 0;
+  margin: 0 0 auto;
 }
 
 .content .check-list li {
