--- a/static/css/practice-tests.css
+++ b/static/css/practice-tests.css
@@ -1,42 +1,71 @@
 .exam-container {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  justify-content: center;
-  align-items: stretch
+  display: grid;
+  grid-gap: 8px;
+  grid-template-columns: repeat(3, minmax(0, 1fr));
 }
 
 .card {
+  position: relative;
   display: flex;
   flex-direction: row;
-  flex-wrap: nowrap;
   justify-content: center;
-  align-items: stretch;
-
   position: relative;
-  width: 320px;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
-  padding: 32px;
+  padding: 24px;
   margin: 2px;
   border-radius: 10px;
   background: #212121;
   border: 2px solid #313131;
-  transition: all 0.5s cubic-bezier(0.23, 1, 0.320, 1);
+  transition: all 0.5s cubic-bezier(0.23, 1, 0.32, 1);
 }
-
 
 .content {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
-  gap: 30px;
   color: #e8e8e8;
-  transition: all 0.5s cubic-bezier(0.23, 1, 0.320, 1);
+  transition: all 0.5s cubic-bezier(0.23, 1, 0.32, 1);
+}
+
+.content .badge-certified {
+  position: absolute;
+  top: 0;
+  right: 10px;
+  transform: translate(0, -50%);
+  border-radius: 4px;
+  background: #0974f1;
+  padding: 4px 8px;
+  font-size: 12px;
+  font-weight: bold;
 }
 
 .content .heading {
   font-weight: 700;
-  font-size: 32px;
+  font-size: 24px;
+  line-height: 32px;
+  margin: 0;
+}
+
+.content .check-list {
+  padding-inline-start: 0;
+  margin: 0 0 auto;
+}
+
+.content .check-list li {
+  display: flex;
+  margin: 10px 0;
+  gap: 8px;
+  list-style: none;
+}
+
+.content .check-list li:before {
+  content: "";
+  display: block;
+  flex-shrink: 0;
+  width: 20px;
+  height: 20px;
+  vertical-align: middle;
+  background: url("/images/check_list.svg") no-repeat left center;
+  background-size: contain;
 }
 
 .content .para {
@@ -44,25 +73,26 @@
 }
 
 .content .btn {
-    color: #e8e8e8;
-    text-decoration: none;
-    padding: 10px;
-    font-weight: 600;
-    border: none;
-    cursor: pointer;
-    background: #0974f1;
-    border-radius: 5px;
-    text-align: center;
-    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
-  }
+  color: #e8e8e8;
+  text-decoration: none;
+  padding: 10px;
+  font-weight: 600;
+  margin-top: 16px;
+  border: none;
+  cursor: pointer;
+  background: #0974f1;
+  border-radius: 5px;
+  text-align: center;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+}
 
-  .content .btn.disabled {
-    color: #999; /* Change the text color to gray */
-    cursor: not-allowed; /* Change cursor to 'not-allowed' */
-    background: #ccc; /* Change background color to light gray */
-    box-shadow: none; /* Remove box shadow */
-    pointer-events: none; /* Disable pointer events */
-  }
+.content .btn.disabled {
+  color: #999; /* Change the text color to gray */
+  cursor: not-allowed; /* Change cursor to 'not-allowed' */
+  background: #ccc; /* Change background color to light gray */
+  box-shadow: none; /* Remove box shadow */
+  pointer-events: none; /* Disable pointer events */
+}
 
 .card:hover {
   box-shadow: 0 0 20px rgba(9, 117, 241, 0.8);
@@ -75,9 +105,26 @@
   color: #e8e8e8;
 }
 
+@media (max-width: 1124px) {
+  .exam-container {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+}
+
 @media (max-width: 768px) {
   .exam-container {
-      flex-direction: column;
-      align-items: center;
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+}
+
+@media (max-width: 650px) {
+  .exam-container {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+}
+
+@media (max-width: 450px) {
+  .exam-container {
+    grid-template-columns: repeat(1, minmax(0, 1fr));
   }
 }
