--- a/layouts/shortcodes/badges.html
+++ b/layouts/shortcodes/badges.html
@@ -16,7 +16,7 @@
     </div>
     <div style="flex: 25%; padding: 5px;">
         <a href="https://www.credly.com/org/github/badge/github-foundations-for-non-developers">
-            <img src="/images/foundations.png" alt="Image 3" style="max-width: 100%;">
+            <img src="/images/foundations_badge.png" alt="Image 3" style="max-width: 100%;">
         </a>
     </div>
 </div>
