--- a/layouts/shortcodes/test_cards.html
+++ b/layouts/shortcodes/test_cards.html
@@ -11,24 +11,24 @@
     <div class="exam-container">
         <div class="card">
             <div class="content">
-                <div class="badge-certified">PASSED</div>
                 <img src="/images/advanced_security_badge.png" alt="advanced_security_badge" style="max-width: 100%;">
                 <ul class="check-list">
-                    <li>5 Questions</li>
+                    <li>1 Questions</li>
                     <li>Code scanning</li>
                     <li>Dependency management</li>
+                    <li>Other</li>
                 </ul>
                 <a href="/practice_tests/advanced_security" class="btn disabled">Unavailable</a>
             </div>
         </div>
         <div class="card">
             <div class="content">
-                <div class="badge-certified">PASSED</div>
                 <img src="/images/actions_badge.png" alt="actions_badge" style="max-width: 100%;">
                 <ul class="check-list">
-                    <li>5 Questions</li>
+                    <li>63 Questions</li>
                     <li>Consume workflows</li>
                     <li>Author and maintain actions</li>
+                    <li>Other</li>
                 </ul>
                 <a href="/practice_tests/actions" class="btn">Start</a>
             </div>
@@ -37,9 +37,10 @@
             <div class="content">
                 <img src="/images/admin_badge.png" alt="admin_badge" style="max-width: 100%;">
                 <ul class="check-list">
-                    <li>5 Questions</li>
+                    <li>1 Questions</li>
                     <li>Manage user identities</li>
                     <li>GitHub authentication</li>
+                    <li>Other</li>
                 </ul>
                 <a href="/practice_tests/admin" class="btn disabled">Unavailable</a>
             </div>
