--- a/static/css/practice-tests.css
+++ b/static/css/practice-tests.css
@@ -67,6 +67,11 @@
   background-size: contain;
 }
 
+.content .check-list li:first-child {
+  font-weight: 600;
+}
+
+
 .content .para {
   line-height: 1.5;
 }
