Shuffle questions, global hardcoded quizdown config

--- a/layouts/partials/custom-header.html
+++ b/layouts/partials/custom-header.html
@@ -7,4 +7,16 @@ src="https://cdn.jsdelivr.net/npm/quizdown@latest/public/build/extensions/quizdo
 <script
 src="https://cdn.jsdelivr.net/npm/quizdown@latest/public/build/extensions/quizdownHighlight.js">
 </script>
-<script>quizdown.register(quizdownHighlight).register(quizdownKatex).init()</script>
+<script>
+    let config = {
+        startOnLoad: true,          // detect and convert all div html elements with class quizdown
+        shuffleAnswers: true,       // shuffle answers for each question
+        shuffleQuestions: true,    // shuffle questions for each quiz
+        nQuestions: undefined,       // display n questions at random, if shuffleQuestions is true
+        primaryColor: 'steelblue',  // primary CSS color
+        secondaryColor: '#f2f2f2',  // secondary CSS color
+        textColor: 'black',         // text color of some elements
+        locale: null                // language of the user interface (auto-detect per default)
+    };
+    quizdown.register(quizdownHighlight).register(quizdownKatex).init(config)
+</script>
