Questions section visible

--- a/layouts/shortcodes/library-links.html
+++ b/layouts/shortcodes/library-links.html
@@ -1,7 +1,6 @@
 
-
 {{ range where (where .Site.RegularPages ".Params.exam" .Params.questions) "Section" "questions" }}
 <ol>
-    <a href="{{ .Permalink }}">{{ .Title }} - {{ .Params.question | markdownify}}</a>
+    <a href="{{ .Permalink }}">{{ .Title }}</a>
 </ol>
 {{ end }}
