--- a/layouts/shortcodes/library-links.html
+++ b/layouts/shortcodes/library-links.html
@@ -1,6 +1,7 @@
-
-{{ range where (where .Site.RegularPages ".Params.exam" .Params.questions) "Section" "questions" }}
 <ol>
-    <a href="{{ .Permalink }}">{{ .Title }}</a>
-</ol>
+{{ range where (where .Site.RegularPages ".Params.exam" .Params.questions) "Section" "questions" }}
+<li>
+    <a href="{{ .Permalink }}">{{ .Params.question }}</a>
+</li>    
 {{ end }}
+</ol>
