--- a/layouts/partials/archetypes/questions/article.html
+++ b/layouts/partials/archetypes/questions/article.html
@@ -2,10 +2,11 @@
 
 {{- $page := .page }}
 {{- with $page }}
-    <article class="questions">
-        <h1 id="{{ .Title | plainify | anchorize }}">{{ .Title }}</h1>{{ partial "heading-post.html" . }}
-        <div class='quizdown'>
-            {{ .RawContent }}
-        </div>
-    </article>
+<article class="questions"> 
+<h1 id="{{ .Title | plainify | anchorize }}">{{ .Title }}</h1>{{ partial "heading-post.html" . }}
+<div class='quizdown'>
+{{ partial "question.html"  . }}
+</div>
+</article>
 {{- end }}
+ 
