--- a/static/css/practice-tests.css
+++ b/static/css/practice-tests.css
@@ -109,6 +109,13 @@
   color: #e8e8e8;
 }
 
+.advanced-settings {
+  padding: 24px;
+  margin: 2px;
+  border-radius: 10px;
+  background-color: #f5f5f5;
+}
+
 @media (max-width: 1300px) {
   .exam-container {
     grid-template-columns: repeat(2, minmax(0, 1fr));
