--- a/layouts/partials/quizdown.html
+++ b/layouts/partials/quizdown.html
@@ -10,9 +10,9 @@ src="https://cdn.jsdelivr.net/npm/quizdown@latest/public/build/extensions/quizdo
 <script>
     let config = {
         startOnLoad: true,          // detect and convert all div html elements with class quizdown
-        shuffleAnswers: {{ with .Page.Params.shuffleAnswers }} {{ . }} {{ else }} true {{ end }},      // shuffle answers for each question
-        shuffleQuestions: {{ with .Page.Params.shuffleQuestions }} {{ . }} {{ else }} false {{ end }},    // shuffle questions for each quiz
-        nQuestions: {{ with .Page.Params.nQuestions }} {{ . }} {{ else }} undefined {{ end }},      // display n questions at random, if shuffleQuestions is true
+        shuffleAnswers: true,      // shuffle answers for each question
+        shuffleQuestions: true,    // shuffle questions for each quiz
+        nQuestions: {{ with .nQuestions }} {{ . }} {{ else }} undefined {{ end }},      // display n questions at random, if shuffleQuestions is true
         primaryColor: 'steelblue',  // primary CSS color
         secondaryColor: '#f2f2f2',  // secondary CSS color
         textColor: 'black',         // text color of some elements
