--- a/layouts/shortcodes/practice_test.html
+++ b/layouts/shortcodes/practice_test.html
@@ -1,6 +1,7 @@
 <base target="_blank">
 
-{{ partial "quizdown.html" .}}
+
+{{ partial "quizdown.html" (dict "nQuestions" .Page.Params.defaultQuestionsAmount  ) }}
 
 {{ $include_exam := .Page.Params.include_exam }}
 
