Use 75 questions as default practice exam

--- a/layouts/shortcodes/test_cards.html
+++ b/layouts/shortcodes/test_cards.html
@@ -9,12 +9,12 @@
             {{ $question_count := len (where (where .Site.RegularPages "Section" "questions") "Params.exam" $include_exam) }}
             
             <ul class="check-list">
-                {{ if gt $question_count .Page.Params.defaultQuestionsAmount }}
-                    <li>{{ .Page.Params.defaultQuestionsAmount }} Questions</li>
-                {{ else }}
-                    <li>{{ $question_count }} Questions</li>
-                {{ end }}
-                
+                <li>
+                    {{ with .Page.Params.defaultQuestionsAmount }} 
+                    {{ if gt $question_count . }} {{ . }} {{ else }} {{ $question_count }} {{ end }} {{ end }} 
+                    Questions
+                </li>
+
                 {{ range .Page.Params.domains }}
                     <li>{{ . }}</li>
                 {{ end }}
