--- a/layouts/partials/quizdown.html
+++ b/layouts/partials/quizdown.html
@@ -8,11 +8,14 @@ src="https://cdn.jsdelivr.net/npm/quizdown@latest/public/build/extensions/quizdo
 src="https://cdn.jsdelivr.net/npm/quizdown@latest/public/build/extensions/quizdownHighlight.js">
 </script>
 <script>
+    let urlParams = new URLSearchParams(window.location.search);
+    let nQuestionsParam = urlParams.get('questions');
+
     let config = {
         startOnLoad: true,          // detect and convert all div html elements with class quizdown
         shuffleAnswers: true,      // shuffle answers for each question
         shuffleQuestions: true,    // shuffle questions for each quiz
-        nQuestions: {{ with .nQuestions }} {{ . }} {{ else }} undefined {{ end }},      // display n questions at random, if shuffleQuestions is true
+        nQuestions: nQuestionsParam ? parseInt(nQuestionsParam) : {{ with .Page.Params.nQuestions }} {{ . }} {{ else }} undefined {{ end }},      // display n questions at random, if shuffleQuestions is true
         primaryColor: 'steelblue',  // primary CSS color
         secondaryColor: '#f2f2f2',  // secondary CSS color
         textColor: 'black',         // text color of some elements
