--- a/layouts/shortcodes/test_cards.html
+++ b/layouts/shortcodes/test_cards.html
@@ -6,10 +6,10 @@
     <div class="card">
         <div class="content">
             <img src="/images/{{.Params.badge}}" alt="advanced_security_badge" style="max-width: 100%;">
-            {{ $question_count := len (where (where .Site.RegularPages "Section" "questions") "Params.exam" $include_exam) }}
+            {{ $questionCount := len (where (where .Site.RegularPages "Section" "questions") "Params.exam" $include_exam) }}
             
             <ul class="check-list">
-                <li>{{ $question_count }} Questions</li>
+                <li>{{ $questionCount }} Questions</li>
                 {{ range .Page.Params.domains }}
                     <li>{{ . }}</li>
                 {{ end }}
@@ -18,7 +18,7 @@
             {{ if .Page.Params.examDisabled }}
                 <a href="/" class="btn disabled">Unavailable</a>
             {{ else }}
-                <a href="{{ .Permalink }}?{{ (querify "questions" 5) | safeURL }}" class="btn">Start</a>
+                <a href="{{ .Permalink }}?{{ (querify "questions" $questionCount) | safeURL }}" class="btn">Start</a>
             {{ end }}
         </div>
     </div>
