--- a/layouts/shortcodes/library-links.html
+++ b/layouts/shortcodes/library-links.html
@@ -1,7 +1,7 @@
 <ol>
 {{ range where (where .Site.RegularPages ".Params.exam" .Params.questions) "Section" "questions" }}
 <li>
-    <a href="{{ .Permalink }}">{{ .Params.question }}</a>
+    <a href="{{ .RelPermalink }}">{{ .Params.question }}</a>
 </li>    
 {{ end }}
 </ol>
