--- a/layouts/partials/logo.html
+++ b/layouts/partials/logo.html
@@ -1,3 +1,3 @@
 <a href="/" title="Home">
-  <img src="/images/branding/logo-black.png" alt="ghcertified logo", width="100%">
+  <img src="/images/logo.png" alt="ghcertified logo", width="100%">
 </a>
