update npm package

--- a/layouts/partials/quizdown.html
+++ b/layouts/partials/quizdown.html
@@ -1,11 +1,11 @@
-<script
-src="https://cdn.jsdelivr.net/npm/quizdown@0.6.0/public/build/quizdown.js">
+<script 
+src="https://cdn.jsdelivr.net/npm/@deivix13/quizdown@0.6.2/public/build/quizdown.js">
 </script>
-<script
-src="https://cdn.jsdelivr.net/npm/quizdown@0.6.0/public/build/extensions/quizdownKatex.js">
+<script 
+src="https://cdn.jsdelivr.net/npm/@deivix13/quizdown@0.6.2/public/build/extensions/quizdownKatex.js">
 </script>
-<script
-src="https://cdn.jsdelivr.net/npm/quizdown@0.6.0/public/build/extensions/quizdownHighlight.js">
+<script 
+src="https://cdn.jsdelivr.net/npm/@deivix13/quizdown@0.6.2/public/build/extensions/quizdownHighlight.js">
 </script>
 <script>
     let urlParams = new URLSearchParams(window.location.search);
